<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp" />

            <TextView
                android:id="@+id/titleregisterpage"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="@string/registerpagetitle"
                android:textColor="@color/purple_500"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fullname"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/FullName"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:ems="10"
                    android:hint="@string/hintname"
                    android:inputType="textPersonName"
                    android:labelFor="@id/FullName"
                    android:textColor="@color/black"

                    android:textColorHint="#78909C" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/roomnumber"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/RoomNumber"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:ems="10"
                    android:hint="@string/hintroomnumber"
                    android:inputType="numberSigned"
                    android:labelFor="@id/RoomNumber"
                    android:textColorHint="#78909C" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registersignup" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>